<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.face.SignUpActivity">


    <TextView
        android:id="@+id/Title"
        android:layout_width="371dp"
        android:layout_height="77dp"
        android:layout_marginBottom="44dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signUpEmailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signUpEmailTitle"
        android:layout_width="141dp"
        android:layout_height="31dp"
        android:layout_marginBottom="12dp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/signUpEmailTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signUpEmailTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/SignUpPasswordTitle"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/SignUpPasswordTitle"
        android:layout_width="122dp"
        android:layout_height="39dp"
        android:layout_marginBottom="12dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/signUpPasswordTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signUpPasswordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:targetApi="o" />

    <CheckBox
        android:id="@+id/agreementCheckbox"
        android:layout_width="385dp"
        android:layout_height="39dp"
        android:layout_marginBottom="24dp"
        android:text="@string/TandC"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpErrorView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="sign_up"
        app:layout_constraintBottom_toTopOf="@+id/agreementCheckbox"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/signUpErrorView"
        android:layout_width="384dp"
        android:layout_height="34dp"
        android:layout_marginBottom="188dp"
        android:text="@string/error_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
