<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.face.SignInActivity">


    <TextView
        android:id="@+id/Title"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signInEmailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signInEmailTitle"
        android:layout_width="99dp"
        android:layout_height="29dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="16dp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/signInEmailTextInput"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/signInEmailTextInput"
        android:layout_width="351dp"
        android:layout_height="55dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/SignInPasswordTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/SignInPasswordTitle"
        android:layout_width="138dp"
        android:layout_height="31dp"
        android:layout_marginBottom="12dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/signInPasswordTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signInPasswordTextInput"
        android:layout_width="355dp"
        android:layout_height="41dp"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:targetApi="o" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="sign_in"
        app:layout_constraintBottom_toTopOf="@+id/verifyEmailAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/signInErrorView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/signInErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:text="@string/error_view"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/verifyEmailAgainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="email_verify_again"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordButton"
        tools:layout_editor_absoluteX="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

